--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,22 @@
+*{
+    padding: 0;
+    margin: 0;
+}
 body {
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
-    color: deeppink
+    font-size: 15px;
+    /* color: deeppink */
+}
+
+header{
+    width: 70%;
+    padding: 1em;
+    text-align: left;
+    border: 1px solid #DDD;
+    margin: 0 auto;
+}
+
+header h1 {
+    font-size: 40px;
 }
