--- a/css/styles.css
+++ b/css/styles.css
@@ -8,15 +8,30 @@ body {
     font-size: 15px;
     /* color: deeppink */
 }
-
-header{
+nav{
     width: 70%;
-    padding: 1em;
     text-align: left;
     border: 1px solid #DDD;
     margin: 0 auto;
 }
 
+header{
+    background-color: #33F;
+    color: white;
+    padding: 0.5em;
+    font-weight: bold;
+    box-shadow: 0px 2px 20px 0px rgba(0, 0, 0, 0.5);
+}
+
 header h1 {
     font-size: 40px;
+}
+
+header span {
+    font-weight: normal;
+    padding-left: 10px;
+}
+
+section{
+    padding: 1em;
 }
